# Lidar-RaspberryPi

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  out  out_hex
doc/: CONTRIBUTING.md  PREREQUISITES.md
examples/: crc8.cpp
examples/doxygen/html/: annotated.html  classLD19.html  classLD19__coll__graph.md5  classLD19__inherit__graph.map  classLidar-members.html  classLidar.html  classLidarModel.html  classLidarModel__inherit__graph.map  classLidarModel__inherit__graph.md5  classes.html  crc__tables_8h_source.html  dir_4c1d7596aae66359654516e3185e0009.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bdeba5f06b852fec80257c0bf4c3c36e.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  ld19_8h_source.html  lidar_8h_source.html  lidar__model_8h_source.html  models_8h_source.html  namespacelidar_1_1verification.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  packet_8h_source.html  structlidar_1_1Packet-members.html  (+5 more)
examples/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
sdk/: README.md
src/: CMakeLists.txt  lidar.cpp  lidar.h  lidar_model.h  main.cpp
src/interfaces/: async_interface.hpp  serial_interface.hpp  serial_interface.tpp
src/models/: ld19.h  lidar.h  lidar_model.h  models.h
src/packet/: crc_tables.h  packet.h  packet_base.h  packet_reader.h  packet_readers.h  packet_status.h  packet_uid.h
src/packet/readers/: gpio_reader.h  packet_reader.h  serial_reader.h  serial_reader.tpp  tcp_reader.h  tcp_reader.tpp  udp_reader.h  udp_reader.tpp
src/packets/: CMakeLists.txt  data.hpp  interfaces.h  types.hpp
src/packets/data/: CMakeLists.txt  extractors.cpp  extractors.h  extractors.hpp  extractors.tpp  point.hpp  point2d.cpp  point2d.h  stl_point.hpp
src/packets/interfaces/: gpio.h  gpio.tpp  packet_interface.h  packet_interface.tpp  serial.h  serial.tpp  stream.h  stream.tpp  tcp.h  tcp.tpp  udp.h  udp.tpp
src/packets/types/: packet_base.h  packet_base.hpp  packet_base.tpp  stl_packet.h  stl_packet.hpp  stl_packet.tpp  types.h
src/packets/utils/: CMakeLists.txt
src/packets/utils/streams/: file.cpp  file.h  serial.cpp  serial.h
src/packets/verification/crc8/: algorithm.h  algorithm.hpp  ld19.h  ld20.h  ld20.hpp
src/utilities/: type_traits.hpp
tests/: CMakeLists.txt
tests/packets/data/: extractors_test.cpp
tests/packets/types/: stl_packet_test.cpp
