# find_package(Boost REQUIRED COMPONENTS unit_test_framework)
# include_directories(${Boost_INCLUDE_DIRS})

# add_executable(test test_example.cpp)
# target_link_libraries(test ${Boost_LIBRARIES})

# enable_testing()

# # Add a test named "MyTest" that runs the executable "test_main"
# add_test(NAME MyTest COMMAND test)